Refactor: Replace private fields with consistent naming convention and improve nullability annotations